--- a/index.html
+++ b/index.html
@@ -32,6 +32,25 @@
     </div>
 
     <div class="section2">
+        <div class="header2">Some random information</div>
+        <div class="content2">
+            <div class="card2">
+                <div class="square2"></div>
+                <div class="text">this is some subtext under an inllustration or image</div>
+            </div>
+            <div class="card2">
+                <div class="square2"></div>
+                <div class="text">this is some subtext under an inllustration or image</div>
+            </div>
+            <div class="card2">
+                <div class="square2"></div>
+                <div class="text">this is some subtext under an inllustration or image</div>
+            </div>
+            <div class="card2">
+                <div class="square2"></div>
+                <div class="text">this is some subtext under an inllustration or image</div>
+            </div>
+        </div>
         
     </div>
 
